--- a/css/style.css
+++ b/css/style.css
@@ -761,6 +761,7 @@ ul h3 {
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        margin-top:4%;
     }
 
     .list h3 {
@@ -833,6 +834,18 @@ ul h3 {
         justify-content: center;
         align-items: center;
         border-bottom: 2px solid #D9D9D9;
+    }
+    #nav-container-hebergement:hover {
+        border-bottom: solid #0065FC;
+        border-top: none;
+        
+    }
+    
+    #nav-container-activites:hover {
+        border-bottom: solid #0065FC;
+        border-top: none;
+      
+    
     }
 
     #before-main {
