--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ main {
 
 /* etoile */
 .etoile {
-    width: 100%;
+    width: 50%;
     margin-left: 6%;
     margin-top: 2%;
 }
@@ -328,13 +328,13 @@ main {
 
 
 /* affichez plus  */
-.plus {
+#plus {
     margin-left: 5%;
     text-decoration: none;
     margin-bottom: 6%;
 }
 
-.plus p {
+#plus p {
     font-size: 18px;
     font-weight: 700;
 }
@@ -423,7 +423,7 @@ main {
 
 /* etoile */
 .card-populaires .etoile {
-    width: 100%;
+    width: 50%;
     position: absolute;
     top: 80%;
 
@@ -536,7 +536,7 @@ footer {
     display: flex;
     justify-content: space-around;
     background-color: #F2F2F2;
-    width: 95%;
+    width: 90%;
     height: 225px;
     margin-left: 5%;
     margin-right: 5%;
@@ -566,11 +566,12 @@ ul {
     flex-direction: column;
     margin-left: 15%;
     margin-top: 5%;
-    width: 100%;
+    width: 50%;
     padding: 0%;
 }
 
 li {
+    max-width: 350px;
     display: flex;
     justify-content: flex-start;
     margin-bottom: 12px;
@@ -822,6 +823,17 @@ ul h3 {
         border-bottom: 2px solid #D9D9D9;
     }
 
+    #nav-container-hebergement:hover {
+        border-top: none;
+        border-bottom: solid #0065FC;
+    }
+
+    #nav-container-activites:hover {
+        border-top: none;
+        border-bottom: solid #0065FC;
+    }
+
+
     #before-main {
         margin-left: 0%;
     }
@@ -935,28 +947,34 @@ ul h3 {
         cursor: pointer;
     }
 
+    #button-search-mobil button {
+        background-color: #0065FC;
+        border: none;
+        color: white;
+        display: flex;
+        justify-content: center;
+
+
+    }
+
+    .card-populaires .etoile {
+        width: 50%;
+        position: absolute;
+        top: 80%;
+        right: 8%;
+    }
+
     #hebergements {
         margin-left: 0%;
         max-width: 900px;
         width: 100%;
-        background-color: #F2F2F2;
+        background-color: white;
         margin-top: 3%;
-        border-radius: 20px;
+        border-radius: 0px;
         order: 1;
     }
 
-    #les-plus-populaires {
-        margin-left: 0%;
-        width: 100%;
-        height: auto;
-        min-height: 650px;
-        background-color: #F2F2F2;
-        border-radius: 20px;
-        margin-top: 3%;
-
-    }
-
-    #annonce-populaires {
+    #annonce-hebergement {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -964,13 +982,50 @@ ul h3 {
         height: 100%;
     }
 
-    .lien-card-populaires {
+    .lien-card-hebergement {
         min-width: 222px;
         width: 100%;
         display: flex;
         justify-content: center;
     }
 
+    .card-hebergement {
+        width: 85%;
+        height: 85%;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+        background: #FFFFFF;
+        border-radius: 20px;
+        margin-bottom: 5%;
+        margin-left: 0%;
+    }
+    #plus {
+        display: none;
+    }
+    #les-plus-populaires {
+        margin-left: 0%;
+        width: 100%;
+        height: auto;
+        min-height: 650px;
+        background-color: #F2F2F2;
+        border-radius: 0px;
+        margin-top: 3%;
+    }
+    #les-plus-populaires #titre-populaires {
+        margin-top: 4%;
+    }
+    #annonce-populaires {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+    .lien-card-populaires {
+        min-width: 222px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
     .card-populaires {
         width: 85%;
         max-width: 400px;
@@ -999,5 +1054,63 @@ ul h3 {
         height: 19%;
     }
 
+    #activites {
+        margin-top: 0%;
+        margin-left: 0%;
+        width: 100%;
+        margin-bottom: 0%;
+        display: flex;
+        flex-direction: column;
+        max-width: 1400px;
+    }
+    #titre-activites{
+        margin-left: 5%;
+        margin-bottom: 2%;
+        padding-top: 3%;
+        width: 50%;
+    }
+    #annonce-activites {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        margin-top: 1%;
+    }
+
+    .lien-card-activites {
+        min-width: 222px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .card-activites {
+        width: 85%;
+        height: 85%;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+        background: #FFFFFF;
+        border-radius: 20px;
+        margin-bottom: 5%;
+        margin-left: 0%;
+    }
+    .card-activites img {
+        border-radius: 20px 20px 0px 0px;
+        width: 100%;
+        height: 100%;
+        max-height: 200px;
+        object-fit: cover;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: space-around;
+        background-color: #F2F2F2;
+        width: 100%;
+        height: auto;
+        padding-top: 10%;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
 
 }
