--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ main {
 #annonce-hebergement {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 90%;
 }
 
@@ -348,7 +348,7 @@ main {
     background-color: #F2F2F2;
     border-radius: 20px;
     margin-top: 3%;
-    max-width: 499px;
+    max-width: 500px;
 
 
 }
@@ -563,11 +563,12 @@ ul {
     flex-direction: column;
     margin-left: 15%;
     margin-top: 5%;
-    width: 100%;
+    width: 50%;
     padding: 0%;
 }
 
 li {
+    max-width: 350px;
     display: flex;
     justify-content: flex-start;
     margin-bottom: 12px;
@@ -643,7 +644,7 @@ ul h3 {
         justify-content: space-between;
         width: 90%;
     }
-    
+
     /*populaires*/
     #les-plus-populaires #titre-populaires {
         display: flex;
@@ -727,23 +728,7 @@ ul h3 {
         width: 40%;
         min-width: 100px;
     }
-    .card-activites .card-texte H2 {
-        padding-left: 8%;
-        margin-top: 7%;
-        margin-bottom:10%;
-    }
-    .card-activites .card-texte {
-        width: 100%;
-        height: 70px;
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        left: 0%;
-        right: 0%;
-        bottom: -0.49px;
-        background: #FFFFFF;
-        border-radius: 0px 0px 20px 20px;
-    }
+
     /*footer*/
     footer {
         display: flex;
@@ -759,9 +744,8 @@ ul h3 {
         width: 80%;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: flex-start;
-        margin-top:4%;
     }
 
     .list h3 {
@@ -835,18 +819,17 @@ ul h3 {
         align-items: center;
         border-bottom: 2px solid #D9D9D9;
     }
+
     #nav-container-hebergement:hover {
-        border-bottom: solid #0065FC;
         border-top: none;
-        
+        border-bottom: solid #0065FC;
     }
-    
+
     #nav-container-activites:hover {
-        border-bottom: solid #0065FC;
         border-top: none;
-      
-    
+        border-bottom: solid #0065FC;
     }
+
 
     #before-main {
         margin-left: 0%;
@@ -881,7 +864,7 @@ ul h3 {
         align-items: center;
         width: 100%;
     }
-    
+
     .button {
         display: flex;
         width: 45%;
@@ -961,28 +944,34 @@ ul h3 {
         cursor: pointer;
     }
 
+    #button-search-mobil button {
+        background-color: #0065FC;
+        border: none;
+        color: white;
+        display: flex;
+        justify-content: center;
+
+
+    }
+
+    .card-populaires .etoile {
+        width: 50%;
+        position: absolute;
+        top: 80%;
+        right: 8%;
+    }
+
     #hebergements {
         margin-left: 0%;
         max-width: 900px;
         width: 100%;
-        background-color: #F2F2F2;
+        background-color: white;
         margin-top: 3%;
-        border-radius: 20px;
+        border-radius: 0px;
         order: 1;
     }
 
-    #les-plus-populaires {
-        margin-left: 0%;
-        width: 100%;
-        height: auto;
-        min-height: 650px;
-        background-color: #F2F2F2;
-        border-radius: 20px;
-        margin-top: 3%;
-
-    }
-
-    #annonce-populaires {
+    #annonce-hebergement {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -990,13 +979,50 @@ ul h3 {
         height: 100%;
     }
 
-    .lien-card-populaires {
+    .lien-card-hebergement {
         min-width: 222px;
         width: 100%;
         display: flex;
         justify-content: center;
     }
 
+    .card-hebergement {
+        width: 85%;
+        height: 85%;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+        background: #FFFFFF;
+        border-radius: 20px;
+        margin-bottom: 5%;
+        margin-left: 0%;
+    }
+    #plus {
+        display: none;
+    }
+    #les-plus-populaires {
+        margin-left: 0%;
+        width: 100%;
+        height: auto;
+        min-height: 650px;
+        background-color: #F2F2F2;
+        border-radius: 0px;
+        margin-top: 3%;
+    }
+    #les-plus-populaires #titre-populaires {
+        margin-top: 4%;
+    }
+    #annonce-populaires {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+    .lien-card-populaires {
+        min-width: 222px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
     .card-populaires {
         width: 85%;
         max-width: 400px;
@@ -1025,5 +1051,63 @@ ul h3 {
         height: 19%;
     }
 
+    #activites {
+        margin-top: 0%;
+        margin-left: 0%;
+        width: 100%;
+        margin-bottom: 0%;
+        display: flex;
+        flex-direction: column;
+        max-width: 1400px;
+    }
+    #titre-activites{
+        margin-left: 5%;
+        margin-bottom: 2%;
+        padding-top: 3%;
+        width: 50%;
+    }
+    #annonce-activites {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        margin-top: 1%;
+    }
+
+    .lien-card-activites {
+        min-width: 222px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .card-activites {
+        width: 85%;
+        height: 85%;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+        background: #FFFFFF;
+        border-radius: 20px;
+        margin-bottom: 5%;
+        margin-left: 0%;
+    }
+    .card-activites img {
+        border-radius: 20px 20px 0px 0px;
+        width: 100%;
+        height: 100%;
+        max-height: 200px;
+        object-fit: cover;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: space-around;
+        background-color: #F2F2F2;
+        width: 100%;
+        height: auto;
+        padding-top: 10%;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
 
 }
