--- a/css/style.css
+++ b/css/style.css
@@ -327,13 +327,13 @@ main {
 
 
 /* affichez plus  */
-.plus {
+#plus {
     margin-left: 5%;
     text-decoration: none;
     margin-bottom: 6%;
 }
 
-.plus p {
+#plus p {
     font-size: 18px;
     font-weight: 700;
 }
@@ -470,8 +470,6 @@ main {
     display: flex;
     align-content: center;
     margin-top: 1%;
-
-
 }
 
 #titre-activites p {
@@ -496,7 +494,7 @@ main {
 
 .card-activites .card-texte {
     width: 100%;
-    height: 56px;
+    height: 65px;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -505,7 +503,6 @@ main {
     bottom: -0.49px;
     background: #FFFFFF;
     border-radius: 0px 0px 20px 20px;
-
 }
 
 .card-activites .card-texte H2 {
@@ -727,6 +724,11 @@ ul h3 {
         overflow: hidden;
         width: 40%;
         min-width: 100px;
+    }
+    .card-activites .card-texte H2 {
+        padding-left: 8%;
+        margin-top: 4%;
+        padding-bottom: 10px;
     }
 
     /*footer*/
@@ -1088,6 +1090,22 @@ ul h3 {
         border-radius: 20px;
         margin-bottom: 5%;
         margin-left: 0%;
+    }
+    .card-activites .card-texte {
+        width: 100%;
+        height: 56px;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: 0%;
+        right: 0%;
+        bottom: -0.49px;
+        background: #FFFFFF;
+        border-radius: 0px 0px 20px 20px;
+    }
+    .card-activites .card-texte H2 {
+        padding-left: 8%;
+        margin-top: 5%;
     }
     .card-activites img {
         border-radius: 20px 20px 0px 0px;
