--- a/css/style.css
+++ b/css/style.css
@@ -820,6 +820,15 @@ ul h3 {
         align-items: center;
         border-bottom: 2px solid #D9D9D9;
     }
+    #nav-container-hebergement:hover {
+        border-top: none;
+        border-bottom: solid #0065FC;
+    }
+    
+    #nav-container-activites:hover {
+        border-top: none;
+        border-bottom: solid #0065FC;
+    }
 
     #before-main {
         margin-left: 0%;
@@ -920,7 +929,6 @@ ul h3 {
 
     #button-search-mobil {
         display: flex;
-        display: flex;
         height: 49px;
         width: 10%;
         justify-content: center;
@@ -933,6 +941,16 @@ ul h3 {
         font-family: 'Raleway', sans-serif;
         cursor: pointer;
     }
+    #button-search-mobil button{
+        display: flex;
+        height: 49px;
+        width: 10%;
+        justify-content: center;
+        align-items: center;
+        background: #0065FC;
+        border: none;
+        color: white;
+    }
 
     #hebergements {
         margin-left: 0%;
@@ -944,7 +962,6 @@ ul h3 {
         order: 1;
     }
 
-<<<<<<< featuremobil
     #annonce-hebergement {
         display: flex;
         flex-direction: column;
@@ -969,11 +986,9 @@ ul h3 {
         margin-bottom: 5%;
         margin-left: 0%;
     }
-    .plus {
+    #plus {
         display: none;
     }
-=======
->>>>>>> main
     #les-plus-populaires {
         margin-left: 0%;
         width: 100%;
@@ -1027,8 +1042,12 @@ ul h3 {
         width: 60%;
         height: 19%;
     }
+    .card-populaires .etoile {
+        position: absolute;
+        top: 75%;
+        left:38%;
+    }
 
-<<<<<<< featuremobil
     #activites {
         margin-top: 0%;
         margin-left: 0%;
@@ -1115,7 +1134,5 @@ ul h3 {
         margin-left: 0%;
         margin-right: 0%;
     }
-=======
->>>>>>> main
 
 }
