--- a/css/style.css
+++ b/css/style.css
@@ -310,8 +310,10 @@ main {
 
 /* etoile */
 .etoile {
-    margin-left: 6%;
-    margin-top: 2%;
+    margin-left: 16px;
+    height: 24px;
+    display: flex;
+    align-items: center;
 }
 
 .etoile .fa-solid {
@@ -404,6 +406,7 @@ main {
     flex-direction: column;
     width: 60%;
     height: 20%;
+    
 
 }
 
@@ -412,7 +415,7 @@ main {
     height: 69px;
     margin-top: 8%;
     display: flex;
-    margin-left: 0px;
+    margin-left:2px;
 }
 
 .card-populaires .card-text p {
@@ -422,8 +425,10 @@ main {
 
 /* etoile */
 .card-populaires .etoile {
-    position: absolute;
-    top: 80%;
+    margin-left: 5px;
+    padding-top: 50px;
+    display: flex;
+    align-items: center;
 
 }
 
@@ -698,7 +703,7 @@ ul h3 {
         height: 69px;
         margin-top: 8%;
         display: flex;
-        margin-left: 0px;
+        margin-left: 5px;
     }
 
     .card-populaires .text-etoile {
@@ -708,7 +713,11 @@ ul h3 {
         height: 20%;
         min-width: 116px;
     }
-
+    .card-populaires .etoile {
+        margin-left: 5px;
+        display: flex;
+        align-items: center;
+    }
     .card-populaires .card-text p {
         font-size: 90%;
     }
@@ -870,7 +879,7 @@ ul h3 {
         height: 40px;
         margin-right: 2%;
         margin-bottom: 2.5%;
-        padding: 1% 3%;
+        padding: 6% 3%;
         border-radius: 25px;
         align-items: center;
         border: 2px solid #D9D9D9;
@@ -1043,9 +1052,9 @@ ul h3 {
         height: 19%;
     }
     .card-populaires .etoile {
-        position: absolute;
-        top: 75%;
-        left:38%;
+        padding-top: 45px;
+        display: flex;
+        align-items: center;
     }
 
     #activites {
