--- a/css/style.css
+++ b/css/style.css
@@ -45,17 +45,11 @@ header {
     justify-content: space-between;
     width: 100%;
 }
-
 a {
     text-decoration: none;
     color: black;
 }
-
-main {
-    display: flex;
-}
-
-#menu {
+main, #menu{
     display: flex;
 }
 
@@ -63,25 +57,19 @@ main {
     text-decoration: none;
     width: auto;
 }
-
 #nav-activites {
     text-decoration: none;
     width: auto;
-
 }
-
 #logo {
     align-items: center;
     display: flex;
     margin-left: 4%;
     width: 5%;
 }
-
 #logo img {
     width: 100%;
-
 }
-
 nav > div {
     width: 162px;
     height: 90px;
@@ -98,8 +86,6 @@ nav > div:hover {
 nav > div a:hover{
     color:#0065FC;
 }
-
-
 /*  texte*/
 
 #before-main {
@@ -235,19 +221,20 @@ nav > div a:hover{
     background-color: #F2F2F2;
     margin-top: 3%;
     border-radius: 20px;
-
 }
 
 #titre-hebergement {
     margin-left: 5%;
     margin-bottom: 2%;
     padding-top: 3%;
+    font-size: 140%;
+    font-weight: 700;
 }
 
 #annonce-hebergement {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 90%;
 }
 
@@ -256,7 +243,6 @@ nav > div a:hover{
     min-width: 222px;
     width: 32%;
 }
-
 .card-hebergement {
     width: 100%;
     height: 85%;
@@ -312,10 +298,6 @@ nav > div a:hover{
 .transparent {
     color: grey;
 }
-
-/* img */
-
-
 
 /* affichez plus  */
 #plus {
@@ -631,7 +613,7 @@ ul h3 {
     #annonce-hebergement {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 90%;
     }
 
